--- a/latihan.html
+++ b/latihan.html
@@ -8,6 +8,7 @@
   <body>
     <button id="button" type="button">Klik</button>
     <h5 id="latihan">ini adalah halaman latihan</h5>
+    <h2>ini adalah halaman ke 2</h2>
     <script src="latihan.js"></script>
   </body>
 </html>
